Fix hero header positioning on small screens

--- a/webpack/_hero.scss
+++ b/webpack/_hero.scss
@@ -38,6 +38,11 @@ $cv-hero-height-sm: 30vh;
   &__inner {
     position: absolute;
     bottom: 0;
+
+    @media (max-width: $breakpoint-sm) {
+      position: static;
+      bottom: auto;
+    }
   }
 
   &--spacer {
